Get project compiling from command line with Maven.